<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_level_ch"
        android:layout_margin="16dp"
        android:text="@string/choose_level"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_level_test"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/test_level_txt"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_level_easy"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_marginEnd="16dp"
        android:text="@string/easy_level_txt"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_level_normal"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:layout_marginEnd="16dp"
        android:text="@string/level_normal_txt"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_level_hard"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/level_hard_txt"/>
</LinearLayout>